fix iframe breaks on small screens, add iframe media querie support

--- a/editor-styles.css
+++ b/editor-styles.css
@@ -480,3 +480,32 @@ body.rtl {
 .rtl table caption {
 	text-align: right;
 }
+
+iframe {
+    width: 100%;
+    height: 420px;
+}
+
+@media screen and (max-width: 1200px) {
+    iframe {
+        height: 300px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    iframe {
+        height: 345px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    iframe {
+        height: 260px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    iframe {
+        height: auto;
+    }
+}
